objects/Prelims_and_Releases__c.object
<CustomObject>
    <fields>
        <fullName>Account_Payable_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Payable Line</label>
        <referenceTo>AcctSeed__Account_Payable_Line__c</referenceTo>
        <relationshipLabel>Prelims and Releases</relationshipLabel>
        <relationshipName>Prelims_and_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Borrego_Subcontractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the Borrego Subcontractor - lookup to the Account</inlineHelpText>
        <label>Tier 1 Subcontractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prelims and Releases</relationshipLabel>
        <relationshipName>Prelims_and_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Construction_Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Construction Purchase Order</label>
        <referenceTo>Con_PO__c</referenceTo>
        <relationshipLabel>Prelims and Releases</relationshipLabel>
        <relationshipName>Prelims_and_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_of_Prelim__c</fullName>
        <inlineHelpText>Date the Prelim was filed</inlineHelpText>
        <label>Date of Prelim</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_Notes__c</fullName>
        <inlineHelpText>Enter a description or any notes on the Prelim not captured elsewhere</inlineHelpText>
        <label>Description/Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Cost__c</fullName>
        <inlineHelpText>Estimated Cost of the Prelim</inlineHelpText>
        <label>Estimated Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form_4_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was Form 4 received?</inlineHelpText>
        <label>Form 4 Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Number_Text__c</fullName>
        <description>New job number field manually updated--not related to PO Line</description>
        <label>Job Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <formula>Purchase_Order_Line__r.AcctSeedERP__Project_Task__r.AcctSeed__Project__r.Job_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Job Number, pulls from the PO Line associated to the Prelim</inlineHelpText>
        <label>Job Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_Through__c</fullName>
        <label>Period Through</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Purchase_Order_Line__r.AcctSeedERP__Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name of the Project the Prelim pertains to- pulls through from the PO Line</inlineHelpText>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Prelims and Releases</relationshipLabel>
        <relationshipName>Prelims_and_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Link to the Purchase Order Line with which this Prelim is associated. Required on all Prelim/Releases</inlineHelpText>
        <label>Purchase Order Line</label>
        <referenceTo>AcctSeedERP__Purchase_Order_Line__c</referenceTo>
        <relationshipLabel>Prelims and Releases</relationshipLabel>
        <relationshipName>Prelims_and_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to the Purchase Order with which this Prelim is associated.</description>
        <label>Purchase Order</label>
        <referenceTo>AcctSeedERP__Purchase_Order__c</referenceTo>
        <relationshipLabel>Prelims and Releases</relationshipLabel>
        <relationshipName>Prelims_and_Releases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tier_2_Subcontractor2__c</fullName>
        <inlineHelpText>Name of the Tier 2 Subcontractor, working for the Vendor listed on the Prelim</inlineHelpText>
        <label>Tier 2 Subcontractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_2_Subcontractor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tier 2 Subcontractor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Prelims and Releases (Tier 2 Subcontractor)</relationshipLabel>
        <relationshipName>Prelims_and_Releases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Conditional Final</fullName>
                </value>
                <value>
                    <fullName>Conditional Progress</fullName>
                </value>
                <value>
                    <fullName>Unconditional Final</fullName>
                </value>
                <value>
                    <fullName>Unconditional Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <inlineHelpText>Name of the Vendor working for the Borrego Subcontractor listed on the Prelim</inlineHelpText>
        <label>Tier 3 Subcontractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Prelims and Releases</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Job_Number__c</columns>
        <columns>Project_Name__c</columns>
        <columns>Borrego_Subcontractor__c</columns>
        <columns>Vendor_Name__c</columns>
        <columns>Date_of_Prelim__c</columns>
        <columns>Estimated_Cost__c</columns>
        <columns>Description_Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>Prelims and Releases Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prelims and Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>